Fixed scrollbars on dialogues

--- a/media/boom/css/boom/dialog.less
+++ b/media/boom/css/boom/dialog.less
@@ -1,7 +1,7 @@
 .b-dialog {
 	background-color: #555;
 	max-height: 100%;
-	overflow-y: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 
 	.ui-dialog-titlebar {
